--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "domination",
+  "name": "xeno69-domination-params-parser",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node.js project for parsing Xeno69's Domination mission parameters",
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/node": "^18.7.14",
